# meson-template

./: README.md  meson.build
docs/: meson.build
docs/doxygen/: Doxyfile.in  meson.build
docs/sphinx/: conf.py.in  developing_guidelines.rst  documentation.rst  index.rst  meson.build
docs/sphinx/source/: conf.py  index.rst
include/: foo.hpp  meson.build
subprojects/: .gitignore
tests/: meson.build  test_unit_test.cpp
